# SansIMI

./: CMakeLists.txt  algo.txt  algoC++.txt  clusters.cpp  clusters.h  display.cpp  display.h  grenoble.txt  jupyter-rechop.ipynb  kiro.cpp  kiro.h  kiro.h.autosave  kiro.py  lloydclustering.py  main.cpp  network.cpp  network.h  nice_6633.txt  nice_6655.txt  parser.h  recuit.cpp  recuit.cpp.autosave  recuit.h  solution.cpp  solution.h  solutions_parser.cpp  solutions_parser.h  testtsp.py
.ipynb_checkpoints/: jupyter-rechop-checkpoint.ipynb
Rechop/: grenoble.txt.save  jupyter-rechop-final.py  parser.cpp  recuit.h
Rechop_2/: instances.cpp  main.cpp  parser.h  recuit.cpp  recuit.h  solution.cpp  solution.h
Rechop_2_real_final/: grenoble.txt  grenoble2.txt  instances.h  main.cpp  paris_25580.txt  rechop.h  recuit.cpp  recuit.h  solution.cpp  solution.h
Rechop_2_real_final/try/: recuit.cpp
build-programcpp-Desktop-Default/: CMakeCache.txt  KIRO_2018.cbp  Kiro  Makefile  cmake_install.cmake
programcpp/: kiro.cpp  kiro.h  main.cpp
results/: grenoble (copy)  grenoble2246  nice6605_copy.txt  nice_7567  nice_7642  nice_7682_3_28_4  paris_26146.txt  paris_31999  paris_35144
